--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ footer,
 /* Style de l'entete */
 header
 {
-	padding: 25px 0 0;
+	padding: 20px 0 0;
 	background-image: url('bg.png');
 	position: fixed;
 	top:0;
@@ -94,14 +94,6 @@ header
 	margin-left: -510px;
 	border-bottom: 3px solid #2C3038;
 	z-index: 9999;
-}
-
-header .button
-{
-	float: right;
-	margin-top: 20px;
-	font-size: 14px;
-	color: #111722;
 }
 
 header .logo
@@ -147,78 +139,49 @@ header ul a:hover
 	color:#ed008c;
 }
 
+header .user-link
+{
+	color:#ed008c;
+	transition:.2s color ease-in;
+	-webkit-transition:.2s color ease-in;
+	-moz-transition:.2s color ease-in;
+	-o-transition:.2s color ease-in;
+	-ms-transition:.2s color ease-in;
+}
+
+header .user-link:hover
+{
+	color:#ff75b3;
+}
+
 #sub-header
 {
-	margin-top:25px;
-	border-top: 3px solid #2C3038;
+	margin-top: 10px;
 }
 
 #sub-header ul
 {
-	width: 100%;
 	margin: 0;
 	list-style: none;
 	padding:0;
 	display: inline-block;
+	float: right;
 }
 
 #sub-header ul li 
 {
-	width: 12.5%;
 	box-sizing: border-box;
 	margin: 0;
 	text-align: center;
-	height: 90px;
 	float:left;
 	font-size: 14px;
 	background-size: cover;
 	background-position: center -18px;
-	border-right: 3px solid #2C3038;
 }
 
 #sub-header ul li:last-child
 {
 	border-right: 0;
-}
-
-#sub-header ul li.music
-{
-	background-image:url('img/domain/music.jpg');
-}
-
-#sub-header ul li.tv-radio-web
-{
-	background-image:url('img/domain/tv_radio_web.jpg');
-}
-
-#sub-header ul li.cinema
-{
-	background-image:url('img/domain/cinema.jpg');
-}
-
-#sub-header ul li.others
-{
-	background-image:url('img/domain/others.jpg');
-}
-
-#sub-header ul li.dance
-{
-	background-image:url('img/domain/dance.jpg');
-}
-
-#sub-header ul li.child
-{
-	background-image:url('img/domain/child.jpg');
-}
-
-#sub-header ul li.fashion-photo
-{
-	background-image:url('img/domain/fashion_photo.jpg');
-}
-
-#sub-header ul li.theater
-{
-	background-image:url('img/domain/theater.jpg');
 }
 
 #sub-header ul li a 
@@ -227,10 +190,9 @@ header ul a:hover
 	display: inline-block;
 	width: 100%;
 	height: 100%;
-	color:#fff;
+	color: #fff;
 	text-decoration: none;
 	box-sizing: border-box;
-	line-height: 8.2em;
 	font-family: 'caviar_dreamsitalic', sans-serif;
 }
 
@@ -239,21 +201,64 @@ header ul a:hover
 	text-decoration: underline;
 }
 
+#sub-header ul li i.icon{
+	width: 20px;
+	height: 20px;
+	position: relative;
+	top: 3px;
+	display: inline-block;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+#sub-header ul li i.icon.music{
+	background-image: url('icon_music.png');
+}
+
+#sub-header ul li i.icon.tv-radio-web{
+	background-image: url('icon_tv-radio-web.png');
+}
+
+#sub-header ul li i.icon.dance{
+	background-image: url('icon_dance.png');
+}
+
+#sub-header ul li i.icon.fashion-photo{
+	background-image: url('icon_fashion-photo.png');
+	top: 6px;
+}
+
+#sub-header ul li i.icon.cinema{
+	background-image: url('icon_cinema.png');
+}
+
+#sub-header ul li i.icon.theater{
+	background-image: url('icon_theater.png');
+}
+
+#sub-header ul li i.icon.child{
+	background-image: url('icon_child.png');
+}
+
+#sub-header ul li i.icon.others{
+	background-image: url('icon_others.png');
+}
+
 /* Style du pied de page */
 footer
 {
 	height:200px;
-	background:#111722;
+	background: #111722;
 	border-top: 10px solid #2C3038;
 }
 
 /* Page d'accueil */
 #home
 {
-	margin-top:216px;
+	margin-top: 152px;
 }
 
-#home .slide
+#home .slide	
 {
 	background-image:url('concert.jpg');
 	background-size:cover;
